git: untracked empty dirs are no longer shown as versioned

As git can't add empty dirs, they don't show up in `git status`. We can get
this list from `git ls-files`.

This list is overlapping with `git status` but we can't gain all info
from just one command. So we use both.

BUG: 447530